(PC-4212): Fix icon shrink on firefox

--- a/src/styles/components/pages/Offers/OfferItem/_OfferItem.scss
+++ b/src/styles/components/pages/Offers/OfferItem/_OfferItem.scss
@@ -36,8 +36,9 @@
     justify-content: center;
 
     img {
-      max-height: rem(16px);
-      max-width: rem(16px);
+      flex-shrink: 0;
+      height: rem(16px);
+      width: rem(16px);
     }
   }
 }
